--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "next": "^9.1.4",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "rgb-hex": "^3.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
     "eslint-plugin-react": "^7.16.0"
   }
