--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "rgb-hex": "^3.0.0"
   },
   "devDependencies": {
+    "@types/node": "^13.9.2",
+    "@types/react": "^16.9.23",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-react": "^7.16.0",
+    "typescript": "^3.8.3"
   }
 }
