--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "jrsalazar.dev",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
+    "lint": "eslint .",
     "export": "NODE_ENV=production next build && next export -o docs && echo 'jrsalazar.dev' > ./docs/CNAME",
     "start": "NODE_ENV=production node server.js"
   },
@@ -16,7 +17,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "express": "^4.17.1",
-    "next": "^9.1.4",
+    "next": "^10.0.2",
     "prop-types": "^15.7.2",
     "puppeteer": "^2.0.0",
     "react": "^16.12.0",
